--- a/game.css
+++ b/game.css
@@ -9,39 +9,39 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: rgba(52, 31, 25, 0.852);
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
+header {
     color: white;
     text-align: center;
-    text-shadow: 2px 2px 10px rgb(25, 121, 230);
+    text-shadow: 2px 2px 10px rgb(50, 14, 230);
     font-size: 40px;
     font-family: 'Lime Days', 'sans-serif';
     margin: 30px 30px 5px;
 }
 
-.players{
+.players {
     font-size: 30px;
     font-weight: 700;
     margin: 10px 10px 20px;
 }
 
-.match-score{
+.match-score {
     display: flex;
     justify-content: center;
     gap: 200px;
     text-align: center;
 }
 
-.score{
+.score {
     font-size: 2rem;
     color: blue;
 }
 
-.options-container{
+.options-container {
     width: 60%;
     margin: 30px auto;
     padding: 20px;
@@ -51,24 +51,24 @@ header{
     justify-content: center;
 }
 
-.options-container h4{
+.options-container h4 {
     text-align: center;
     color: white;
     position: absolute;
 }
 
-.options{
+.options {
     min-width: 0;
     margin: 20px 45px 0;
     transition: all 0.5s;
 }
 
-.options:hover{
+.options:hover {
     cursor: pointer;
     transform: scale(1.2);
 }
 
-#round-info{
+#round-info {
     color: white;
     text-align: center;
     text-shadow: 2px 2px 10px rgb(25, 121, 230);
