--- a/menu.css
+++ b/menu.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
     background-color: rgba(25, 15, 12, 0.852);
@@ -13,22 +13,23 @@ body{
     justify-content: center;
 }
 
-#submission-form{
+#submission-form {
     text-align: center;
     width: 50%;
     display: flex;
     flex-direction: column;
 }
 
-h1{
+h1 {
+    font-family: 'Lime Days', 'sans-serif';
     color: white;
 }
 
-label{
+label {
     color: rgb(162, 235, 253);
 }
 
-#username{
+#username {
     width: 55%;
     height: 40px;
     margin: 10px auto;
@@ -37,16 +38,16 @@ label{
     transition: 0.2s ease;
 }
 
-#username::placeholder{
+#username::placeholder {
     opacity: 0.5;
     text-align: center;
 }
 
-#username:hover{
+#username:hover {
     transform: scale(1.1);
 }
 
-#play-button{
+#play-button {
     width: 32%;
     height: 35px;
     margin: 0 auto;
@@ -55,22 +56,22 @@ label{
     transition: 0.5s ease;
 }
 
-#play-button:hover{
+#play-button:hover {
     cursor: pointer;
     background-color: blue;
   
 }
 
-#error{
+#error {
     display: none;
 }
 
-#error p{
+#error p {
     color: rgb(150, 59, 59);
     margin: 10px;
     font-weight: 700;
 }
 
-#error span{
+#error span {
     color: red;
 }
